fix: problem spacing (#200)
* fix: add code style

* fix: add margin to problem numbers

* remove other pr

--- a/generic-styles/index.less
+++ b/generic-styles/index.less
@@ -31,6 +31,10 @@
       margin-inline-start: 0;
     }
   }
+  [data-type="composite-page"] [data-type="exercise"] [data-type="problem"] p:first-of-type a {
+    font-weight: 700;
+    margin-right: .5em;
+  }
   code {
     color: #c7254e;
     background-color: #f9f2f4;
